# manipulator_6_DOF_project

./: README.md
manipulator_embedded_software/: .mxproject  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  manipulator_6_dof.ioc
manipulator_embedded_software/Core/Inc/: imu_adresses.h  imu_handler.h
manipulator_embedded_software/Core/Inc/Backup/: ICM20948.h.bak  imu_adresses.h.bak  stm32l4xx_it.h.bak
manipulator_embedded_software/Core/Src/: ICM20948.c  imu_handler.c  main.c  stm32l4xx_it.c
manipulator_embedded_software/Core/Src/Backup/: ICM20948.c.bak  i2c.c.bak  main.c.bak
manipulator_embedded_software/cmake/stm32cubemx/: CMakeLists.txt
manipulator_qt_application/: CMakeLists.txt  main.cpp
